added word-wrap for the main content

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="title-text">
                   <h3>Super Cool Project</h3>
                   <p class="text">
-                    There are many variations of passages of Lorem Ipsum
+                    There are many variations of passages of Lorem Ipsummmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm1
                     available
                   </p>
                 </div>
